--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^8.2",
         "kyslik/column-sortable": "^6.6",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "s-damian/larasort": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
